@@ -1,3 +1,9 @@
+2004-11-04  Hans-Peter Nilsson  <hp@axis.com>
+
+	* cris.h (EF_CRIS_VARIANT_MASK, EF_CRIS_VARIANT_ANY_V0_V10)
+	(EF_CRIS_VARIANT_V32, EF_CRIS_VARIANT_COMMON_V10_V32): New
+	macros.
+
 2004-10-06  Eric Christopher  <echristo@redhat.com>
 
 	* dwarf2.h: Sync with gcc dwarf2.h. Fix typo.
